# collins

./: .gitignore  Makefile  pyproject.toml  readme.md
collins/: buider.py  builder.py  changeset.py  document.py  encode.py  operations.py
example/: Makefile  pyproject.toml  readme.md
example/frontend/: Makefile  babel.config.js  package.json  tsconfig.json  webpack.config.js
example/frontend/js/: DocumentList.css  DocumentList.tsx  DocumentView.css  DocumentView.tsx  LiveArea.jsx  LiveArea.tsx  common.css  utils.tsx
example/frontend/js/components/: ActionLog.css  ActionLog.jsx  ActionLog.tsx  AppInfo.jsx  AppInfo.tsx  DocumentList.css  DocumentList.tsx  Footer.tsx  Header.css  Header.tsx  Identity.css  Identity.tsx  OtherViewers.css  OtherViewers.tsx  Textarea.css  Textarea.jsx  Textarea.tsx  Websocket.jsx  Websocket.tsx  colors.tsx
example/frontend/js/entities/: Document.tsx
example/frontend/js/livearea/: documents.tsx
example/frontend/js/livearea/events/: entities.tsx  hooks.tsx
example/frontend/js/states/: documentID.tsx  documents.tsx  sessions.tsx
example/livearea/: __init__.py  app.py  connection_manager.py  consts.py  entities.py  logger.py  main.py
example/livearea/entities/: documents.py  sessions.py
example/livearea/managers/: __init__.py  connections.py  documents.py
example/livearea/protocol/: events.py
example/livearea/repositories/: documents.py  sessions.py
example/livearea/services/: documents.py  events.py
example/templates/: document_view.html  index.html
tests/: test_changeset.py  test_operation.py  test_operation_list.py  (+1 more)
(+4 files in other folders)
