[tool.poetry]
name = "collins"
version = "0.0.1"
description = "Toolkit to implement Operational Tranformation algorithm that helps to build real-time collaboration applications"
authors = ["Roman Glushko <roman.glushko.m@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
